objects/ScoreDebug__c.object
<CustomObject>
    <fields>
        <fullName>CaseValues__c</fullName>
        <label>CaseValues</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinalScore__c</fullName>
        <label>FinalScore</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <label>Requirements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RuleScenarios__c</fullName>
        <label>RuleScenarios</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScheduleBlocks__c</fullName>
        <label>ScheduleBlocks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scorings__c</fullName>
        <label>Scorings</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UserData__c</fullName>
        <label>UserData</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>ScoreDebug</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SD{00000}</displayFormat>
        <label>ScoreDebug Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ScoreDebugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>